--- a/package.json
+++ b/package.json
@@ -3,30 +3,46 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
-  "dependencies": {
-    "@heroicons/react": "^2.1.4",
-    "@tailwindcss/forms": "^0.5.7",
-    "@vercel/postgres": "^0.8.0",
-    "autoprefixer": "10.4.19",
+    "dependencies": {
+    "@heroicons/react": "^2.1.5",
+    "@tailwindcss/forms": "^0.5.8",
+    "@typescript-eslint/parser": "^8.3.0",
+    "@vercel/postgres": "^0.9.0",
+    "autoprefixer": "10.4.20",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
-    "next": "15.0.0-canary.56",
-    "next-auth": "5.0.0-beta.19",
-    "postcss": "8.4.38",
-    "react": "19.0.0-rc-f38c22b244-20240704",
-    "react-dom": "19.0.0-rc-f38c22b244-20240704",
-    "tailwindcss": "3.4.4",
-    "typescript": "5.5.2",
-    "use-debounce": "^10.0.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "glob": "^11.0.0",
+    "lodash": "^4.17.21",
+    "next": "15.0.0-canary.137",
+    "next-auth": "5.0.0-beta.20",
+    "postcss": "8.4.42",
+    "react": "19.0.0-rc-7771d3a7-20240827",
+    "react-dom": "19.0.0-rc-7771d3a7-20240827",
+    "rimraf": "^6.0.1",
+    "tailwindcss": "3.4.10",
+    "typescript": "5.5.4",
+    "use-debounce": "^10.0.3",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "20.14.8",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0"
+    "@types/node": "22.5.2",
+    "@types/react": "18.3.5",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/parser": "^8.3.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.2.7",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.9.0",
+    "eslint-plugin-react-hooks": "^4.6.2"
   },
   "engines": {
     "node": ">=20.12.0"
